--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "new-assiut-services",
+  "name": "qareeblak",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=25.7.0"
+  },
   "scripts": {
     "dev": "next dev --webpack",
     "build": "next build",
@@ -34,7 +37,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/canvas-confetti": "^1.9.0",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.4",
